# Rusbotics

./: Cargo.toml  README.md  clippy_with_tectonic.sh  compile.nu  compile.sh  compile_setup.txt  compile_with_tectonic.sh  debug_with_tectonic.nu  run_with_tectonic.sh  test_file.tex  test_file1.ods  url.txt
.cargo/: config.toml
python_app/: app.py  jacobian.py  library.py  teste.ipynb
src/: gui_functions.rs  lib.rs  main.rs  robotics.rs  script.rs
src/error/: symbolic_calculation_errors.rs
src/script/: SymCalculationState.rs  sym_calculation_state.rs
test_files/: test_file.tex
